--- a/index.html
+++ b/index.html
@@ -2,85 +2,72 @@
 <html lang="en">
 <head>
 	<style>
+		@media (max-width: 600px) {
 			.logo-link {
 				top: 2vw !important;
 				left: 0 !important;
 				width: 100% !important;
 				text-align: center !important;
+			}
+			.logo-img {
+				width: 38vw !important;
+				min-width: 80px !important;
+				max-width: 180px !important;
+			}
+			.bottom-bar {
+				display: none !important;
+			}
+			.mobile-nav {
+				display: block !important;
+			}
+			.bg-img {
+				object-fit: cover !important;
+				width: 100vw !important;
+				height: 100vh !important;
+				min-width: 100vw !important;
+				min-height: 100vh !important;
+				max-width: 100vw !important;
+				max-height: 100vh !important;
+				object-position: center center !important;
+				background: #000 !important;
+			}
+			.hotspot {
+				display: none !important;
+			}
+			.mobile-page-list {
+				display: flex !important;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				width: 90vw;
+				z-index: 10;
+				gap: 4vw;
+			}
+			.mobile-page-list a {
+				display: block;
+				background: rgba(56,69,31,0.92);
+				color: #f47a2c;
+				font-family: 'Permanent Marker', 'Montserrat', Arial, sans-serif;
+				font-size: 6vw;
+				font-weight: 700;
+				text-align: center;
+				text-decoration: none;
+				border-radius: 14px;
+				padding: 3vw 0;
+				margin: 0;
+				box-shadow: 0 2px 8px #0005;
+				letter-spacing: 1px;
+				transition: background 0.18s, color 0.18s;
+			}
+			.mobile-page-list a:active {
+				background: #38451f;
+				color: #fffbe7;
+			}
 		}
-		}
-				.bg-img-container {
-					background: #000 url('20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png') no-repeat center center !important;
-					background-size: cover !important;
-				}
-</style>
-
-<body>
-	<div class="fade-content">
-		<nav class="bottom-bar">
-			<a href="/index.html">Home</a>
-			<a href="/photos.html">Photography</a>
-			<a href="/videos.html">Live Recordings</a>
-			<a href="/interviews.html">Interviews</a>
-			<a href="/contact.html">Contact</a>
-		</nav>
-		<!-- Background is now set via CSS -->
-		<a href="/index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview" class="logo-img" border="0"></a>
-		<!-- Hotspot: Coffee Table (Interviews) -->
-		<a href="/interviews.html" class="hotspot" style="top: 44%; left: 65%;" data-bg-x="50" data-bg-y="50">
-			<span class="hotspot-label">Interviews</span>
-		</a>
-		<!-- Hotspot: Camera (Photography) -->
-		<a href="/photos.html" class="hotspot" style="top: 50%; left: 12%;" data-bg-x="50" data-bg-y="50">
-			<span class="hotspot-label">Photography</span>
-		</a>
-		<!-- Hotspot: TV (Live Recordings) -->
-		<a href="/videos.html" class="hotspot" style="top: 15%; left: 70%;" data-bg-x="50" data-bg-y="50">
-			<span class="hotspot-label">Live Recordings</span>
-		</a>
-		<div class="bg-img-container">
-			<img src="https://videos.openai.com/vg-assets/assets%2Ftask_01k3rt7bzzespt7mep56qyhs6s%2F1756400852_img_0.webp?st=2025-08-28T15%3A52%3A53Z&se=2025-09-03T16%3A52%3A53Z&sks=b&skt=2025-08-28T15%3A52%3A53Z&ske=2025-09-03T16%3A52%3A53Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=aa5ddad1-c91a-4f0a-9aca-e20682cc8969&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=8X%2B%2Bf5os0GjZlKZUQ3rkgqCUku3L%2FkkQfyJRMEpCrUk%3D&az=oaivgprodscus" class="bg-img zoom-target" id="main-bg-img" alt="Room Background"/>
-		</div>
-		<!-- Recent Events Section -->
-		<section class="recent-events-section">
-			<h2 class="recent-events-title">Recent Events</h2>
-			<div class="event-passes-row">
-				<div class="event-pass-card" tabindex="0">
-					<img src="20250829_1648_Camera and Media Badge_remix_01k3vs9p0jfr7vyadgmzse2h63-Picsart-AiImageEnhancer.png" alt="Media Pass 1" class="event-pass-img" />
-					<div class="event-pass-details">
-						<div class="event-pass-date">August 29, 2025</div>
-						<div class="event-pass-title">Camera & Media Badge</div>
-						<div class="event-pass-description">Behind the scenes with the media crew at the studio.</div>
-					</div>
-				</div>
-				<div class="event-pass-card" tabindex="0">
-					<img src="20250829_1817_Concert Collection VHS_remix_01k3vycznhe5b889e8v784wgj3.png" alt="Media Pass 2" class="event-pass-img" />
-					<div class="event-pass-details">
-						<div class="event-pass-date">August 29, 2025</div>
-						<div class="event-pass-title">Concert Collection VHS</div>
-						<div class="event-pass-description">Vintage concert moments captured on VHS.</div>
-					</div>
-				</div>
-				<div class="event-pass-card" tabindex="0">
-					<img src="20250830_1141_Retro Concert VHS_remix_01k3xt3re2e2qse35jvm7qdx89.png" alt="Media Pass 3" class="event-pass-img" />
-					<div class="event-pass-details">
-						<div class="event-pass-date">August 30, 2025</div>
-						<div class="event-pass-title">Retro Concert VHS</div>
-						<div class="event-pass-description">A throwback to classic concert vibes.</div>
-					</div>
-				</div>
-				<div class="event-pass-card" tabindex="0">
-					<img src="20250830_1147_Music Interview Setup_remix_01k3xtfg5fefbb29m8hretr98a.png" alt="Media Pass 4" class="event-pass-img" />
-					<div class="event-pass-details">
-						<div class="event-pass-date">August 30, 2025</div>
-						<div class="event-pass-title">Music Interview Setup</div>
-						<div class="event-pass-description">Setting up for exclusive artist interviews.</div>
-					</div>
-				</div>
-			</div>
-		</section>
-	</div>
-</body>
 		.mobile-nav {
 			display: none;
 			position: fixed;
@@ -156,111 +143,9 @@
 		}
 	</style>
 	<style>
-		.recent-events-section {
-			width: 100vw;
-			max-width: 100vw;
-			overflow-x: auto;
-			background: rgba(0,0,0,0.72);
-			padding: 32px 0 18px 0;
-			margin: 0 auto 0 auto;
-			z-index: 2;
-			position: relative;
-			box-shadow: 0 4px 24px #0007;
-			border-bottom: 2px solid #f47a2c33;
-		}
-		.recent-events-title {
-			color: #f47a2c;
-			font-family: 'Permanent Marker', 'Montserrat', Arial, sans-serif;
-			font-size: 2.1em;
-			margin: 0 0 18px 32px;
-			letter-spacing: 1.5px;
-			text-shadow: 0 2px 8px #000, 0 0 2px #f47a2c;
-		}
-		.event-passes-row {
-			display: flex;
-			flex-direction: row;
-			gap: 32px;
-			overflow-x: auto;
-			padding: 0 32px 0 32px;
-			scrollbar-width: thin;
-			scrollbar-color: #f47a2c #222;
-		}
-		.event-pass-card {
-			background: #222d;
-			border-radius: 18px;
-			box-shadow: 0 2px 16px #0008;
-			min-width: 220px;
-			max-width: 240px;
-			flex: 0 0 auto;
-			cursor: pointer;
-			transition: transform 0.18s, box-shadow 0.18s;
-			outline: none;
-			border: 2px solid transparent;
-			position: relative;
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			padding: 18px 12px 16px 12px;
-		}
-		.event-pass-card:focus, .event-pass-card:hover {
-			transform: scale(1.06) translateY(-4px);
-			box-shadow: 0 6px 32px #f47a2c55, 0 0 0 2px #f47a2c;
-			border: 2px solid #f47a2c;
-			z-index: 3;
-		}
-		.event-pass-img {
-			width: 100%;
-			max-width: 180px;
-			border-radius: 12px;
-			box-shadow: 0 2px 12px #000a;
-			margin-bottom: 12px;
-			background: #111;
-		}
-		.event-pass-details {
-			color: #fffbe7;
-			font-family: 'Montserrat', Arial, sans-serif;
-			text-align: center;
-			margin-top: 2px;
-		}
-		.event-pass-date {
-			font-size: 1.05em;
-			color: #f47a2c;
-			font-weight: bold;
-			margin-bottom: 2px;
-		}
-		.event-pass-title {
-			font-size: 1.15em;
-			font-weight: 700;
-			margin-bottom: 4px;
-			color: #fff;
-			letter-spacing: 0.5px;
-		}
-		.event-pass-description {
-			font-size: 0.98em;
-			color: #fffbe7cc;
-			margin-bottom: 0;
-		}
-		@media (max-width: 700px) {
-			.event-passes-row {
-				gap: 16px;
-				padding: 0 8vw 0 8vw;
-			}
-			.event-pass-card {
-				min-width: 160px;
-				max-width: 180px;
-				padding: 12px 6px 12px 6px;
-			}
-			.recent-events-title {
-				font-size: 1.3em;
-				margin-left: 12px;
-			}
-		}
-	</style>
-	<style>
 		.fade-content {
 			opacity: 0;
 			transition: opacity 0.5s cubic-bezier(.4,0,.2,1);
-			background: transparent !important;
 		}
 		.fade-content.visible {
 			opacity: 1;
@@ -268,7 +153,6 @@
 		.fade-content.fade-out {
 			opacity: 0 !important;
 			transition: opacity 0.4s cubic-bezier(.4,0,.2,1);
-			background: transparent !important;
 		}
 	</style>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Permanent+Marker&display=swap" rel="stylesheet">
@@ -286,7 +170,6 @@
 				height: 100vh;
 				overflow: hidden;
 				background: #000;
-				background-size: cover;
 				display: block;
 			}
 					.bg-img-container {
@@ -538,9 +421,36 @@
 			}
 		}
 	</style>
-			   </head>
-			<body>
+</head>
 
+		body {
+			margin: 0;
+			padding: 0;
+			min-height: 100vh;
+			min-width: 100vw;
+			font-family: 'Montserrat', Arial, sans-serif;
+			background: #000 url('live/concertbackground.png') no-repeat center center fixed;
+			background-size: cover;
+			color: #fff;
+			overflow-x: hidden;
+		}
+
+		@media (max-width: 700px) {
+			body {
+				background-position: 0 0;
+				background-size: contain;
+				animation: bg-move-left 30s linear infinite;
+			}
+			@keyframes bg-move-left {
+				0% {
+					background-position-x: 0%;
+				}
+				100% {
+					background-position-x: 100%;
+				}
+			}
+		}
+    
 	<script>
 		// Hamburger menu toggle for mobile
 		document.addEventListener('DOMContentLoaded', function() {
@@ -590,7 +500,7 @@
 			});
 		});
 	</script>
-			   <div class="fade-content">
+		<div class="fade-content">
 			<nav class="bottom-bar">
 				<a href="/index.html">Home</a>
 				<a href="/photos.html">Photography</a>
@@ -601,7 +511,14 @@
 			<!-- Background is now set via CSS -->
 			<a href="/index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview" class="logo-img" border="0"></a>
 
-
+			<!-- Mobile: Centered page list -->
+			<div class="mobile-page-list" style="display:none;">
+				<a href="/index.html">Home</a>
+				<a href="/photos.html">Photography</a>
+				<a href="/videos.html">Live Recordings</a>
+				<a href="/interviews.html">Interviews</a>
+				<a href="/contact.html">Contact</a>
+			</div>
 
 			<!-- Hotspot: Coffee Table (Interviews) -->
 			<a href="/interviews.html" class="hotspot" style="top: 44%; left: 65%;" data-bg-x="50" data-bg-y="50">
@@ -621,11 +538,17 @@
 		</div>
 		<script>
 			// Show mobile page list only on mobile
-
+			function toggleMobilePageList() {
+				var list = document.querySelector('.mobile-page-list');
+				if (!list) return;
+				if (window.innerWidth <= 600) {
+					list.style.display = 'flex';
+				} else {
+					list.style.display = 'none';
+				}
+			}
+			window.addEventListener('DOMContentLoaded', toggleMobilePageList);
+			window.addEventListener('resize', toggleMobilePageList);
 		</script>
-<body>
-       <div class="fade-content">
-	       <div class="bg-img-container">
-		       <img src="https://videos.openai.com/vg-assets/assets%2Ftask_01k3rt7bzzespt7mep56qyhs6s%2F1756400852_img_0.webp?st=2025-08-28T15%3A52%3A53Z&se=2025-09-03T16%3A52%3A53Z&sks=b&skt=2025-08-28T15%3A52%3A53Z&ske=2025-09-03T16%3A52%3A53Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=aa5ddad1-c91a-4f0a-9aca-e20682cc8969&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=8X%2B%2Bf5os0GjZlKZUQ3rkgqCUku3L%2FkkQfyJRMEpCrUk%3D&az=oaivgprodscus" class="bg-img zoom-target" id="main-bg-img" alt="Room Background"/>
-	       </div>
-
+</body>
+    
