--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
 	<style>
-			.logo-link {
-				top: 2vw !important;
-				left: 0 !important;
-				width: 100% !important;
-				text-align: center !important;
-		}
+			   .logo-link {
+				   position: fixed;
+				   top: 2vw;
+				   left: 2vw;
+				   width: auto;
+				   text-align: left;
+				   z-index: 10;
+				   background: transparent;
+				   padding: 0;
 		}
 				.bg-img-container {
 					background: #000 url('20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png') no-repeat center center !important;
@@ -389,17 +392,19 @@
 								filter: brightness(1.35) drop-shadow(0 0 16px #fff8);
 								transition: width 0.2s, top 0.2s, left 0.2s;
 							}
-		@media (max-width: 600px) {
-			.logo-link {
-				top: 12vw;
-				left: 2vw;
-			}
-			.logo-img {
-				width: 38vw;
-				min-width: 80px;
-				max-width: 180px;
-			}
-		}
+		   @media (max-width: 600px) {
+			   .logo-link {
+				   top: 12vw;
+				   left: 2vw;
+				   width: auto;
+				   text-align: left;
+			   }
+			   .logo-img {
+				   width: 38vw;
+				   min-width: 80px;
+				   max-width: 180px;
+			   }
+		   }
 	</style>
 			   </head>
 			<body>
