--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<span class="hotspot-label">Live Recordings</span>
 		</a>
 		<div class="bg-img-container">
-			<img src="https://videos.openai.com/vg-assets/assets%2Ftask_01k3rt7bzzespt7mep56qyhs6s%2F1756400852_img_0.webp?st=2025-08-28T15%3A52%3A53Z&se=2025-09-03T16%3A52%3A53Z&sks=b&skt=2025-08-28T15%3A52%3A53Z&ske=2025-09-03T16%3A52%3A53Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=aa5ddad1-c91a-4f0a-9aca-e20682cc8969&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=8X%2B%2Bf5os0GjZlKZUQ3rkgqCUku3L%2FkkQfyJRMEpCrUk%3D&az=oaivgprodscus" class="bg-img zoom-target" id="main-bg-img" alt="Room Background"/>
+			   <img src="20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png" class="bg-img zoom-target" id="main-bg-img" alt="Room Background"/>
 		</div>
 	</div>
 </body>
